--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.0",
-    "nodemailer": "^6.7.2"
+    "nodemailer": "^6.7.2",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
