--- a/config.json
+++ b/config.json
@@ -4,6 +4,6 @@
     "lon": -1.6565472437551747
 }, {"PRODUCCION":{
     "ddbbuser":"Guillermo",
-    "ddbbpsw":"Ragnarson11"}
+    "ddbbpsw":"R************"}
 
 }]
